# code_2

./: .gitignore  .travis.yml  LICENSE  README.rst  conftest.py  doctest_to_python.py  pyproject.toml  pytest.ini  requirements.txt  test_output.py  tox.ini
CH_01_getting_started/: README.rst
CH_01_getting_started/T_00_poetry/: pyproject.toml
CH_02_interactive_python/: README.rst  T_00_the_python_interpreter.rst  T_01_modifying_the_interpreter.rst  T_02_modifying_autocompletion.py  T_02_modifying_autocompletion.rst  T_03_bpython_rewind.rst  bpython_reload.py  session_filename.ipy
CH_03_pythonic_syntax/: README.rst  T_00_format_strings.rst  T_01_pep20.rst  T_02_beautiful_is_better_than_ugly.rst  T_03_explicit_is_better_than_implicit.rst  T_04_simple_is_better_than_complex.rst  T_05_flat_is_better_than_nested.rst  T_06_sparse_is_better_than_dense.rst  T_07_readability_counts.rst  T_08_practicality_beats_purity.rst  T_09_silent_errors.rst  T_10_ambiguity.rst  T_11_now_or_never.rst  T_12_namespaces.rst  T_13_duck_typing.rst  T_14_value_versus_identity.rst  T_15_loops.rst  T_16_mccabe.py  T_17_mypy.py  T_18_flake8.py  T_19_match_statement.rst  T_20_global_variables.rst  T_21_mutable_variables.rst  T_22_class_properties.rst  T_23_prettyprint_builtin.py  T_24_overwriting_built-ins.rst  T_25_modify_while_iterating.rst  T_26_catching_exceptions.rst  T_27_late_binding.rst  T_28_circular_imports_a.py  T_28_circular_imports_b.py  T_29_circular_imports_a.py  T_29_circular_imports_b.py  T_29_circular_imports_c.py  T_30_dynamic_imports.rst
CH_04_design_patterns/: README.rst  T_00_time_complexity_big_o.rst  T_01_list.rst  T_02_dict.rst  T_03_set.rst  T_04_tuple.rst  T_05_dataclasses.rst  T_06_chainmap.rst  T_07_defaultdict.rst  T_08_enum.rst  T_09_heapq.rst  T_10_bisect.rst  T_11_borg_and_singleton.rst  T_12_getters_and_setters.rst  T_13_dict_union.rst
CH_05_functional_programming/: README.rst  T_00_intro.rst  T_01_list_comprehensions.rst  T_02_dict_comprehensions.rst  (+12 more)
CH_18_packaging/T_00_basic_pyproject/: conftest.py  pyproject.toml
CH_18_packaging/T_00_basic_pyproject/tests/: test_t_00_basic_pyproject.py
CH_18_packaging/T_01_pyproject_extensions/: build_extension.py  pyproject.toml
CH_18_packaging/T_01_pyproject_extensions/tests/: test_t_01_pyproject_extensions.py
CH_18_packaging/T_03_basic_setup_cfg/: setup.cfg
(+290 files in other folders)
