[tool.poetry]
name = "T_01_pyproject_extensions"
version = "0.1.0"
description = ""
authors = ["Rick van Hattem <Wolph@wol.ph>"]
build = "build_extension.py"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
