[metadata]
name = T_03_basic_setup_cfg
version = 0.1.0
url='https://wol.ph/',
author='Rick van Hattem',
author_email='wolph@wol.ph',

[build-system]
requires =
    setuptools
    wheel

[options]
packages = find:

install_requires =
    portalocker

include_package_data=True,

project_urls=
    docs=https://progressbar-2.readthedocs.io/

[options.extras_require]
docs = sphinx
tests = pytest

[options.entry_points]
console_scripts =
    our_command = T_03_basic_setup_cfg.main:run

our.custom.plugins =
    some_plugin = T_03_basic_setup_cfg.some_plugin:run

[options.package_data]
# Include all documentation files
* = *.rst

# Include docs and tests
tests = *
docs = *

[options.exclude_package_data]
* = *.pyc, *.pyo
dist = *
build = *
